fix: Home page header alignment

--- a/src/App.css
+++ b/src/App.css
@@ -160,8 +160,10 @@ header {
 }
 
 .home-header {
-  padding: 16px 32px;
-  margin: 16px 32px;
+  /* padding: 16px 32px;
+  margin: 10px 22px; */
+   margin-bottom: 20px ;
+   padding-top: 40px;
 }
 
 
